--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "./cmd",
-            "args": ["dev"],
+            "args": ["hello world"],
             "console": "integratedTerminal",
           }
     ]
